--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /StrategyEstacionamento/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
 /StrategyEstacionamento/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
 /StrategyEstacionamento/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
+/.idea/
