--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /StrategyEstacionamento/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
 /StrategyEstacionamento/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
 /.idea/**
+/StrategyPattern/target/
