--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>br.com.ccs.ita</groupId>
-    <artifactId>StrategyEstacionamento</artifactId>
+    <groupId>br.com.ccs</groupId>
+    <artifactId>ITA-Desenvolvimento_Agil_com_Design_Patterns</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>StrategyPattern</module>
+        <module>Factorypattern</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
