--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>StrategyPattern</module>
-        <module>Factorypattern</module>
+        <module>StaticFactoryMethodsPattern</module>
     </modules>
 
     <properties>
