--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>StrategyPattern</module>
         <module>StaticFactoryMethodsPattern</module>
+        <module>NullObject</module>
     </modules>
 
     <properties>
