--- a/NullObjectPattern/pom.xml
+++ b/NullObjectPattern/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>NullObject</artifactId>
+    <artifactId>NullObjectPattern</artifactId>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
